cmake_minimum_required(VERSION 3.0.0)
project(Goal VERSION 0.1.0 LANGUAGES CXX)
include(cmake/bob.cmake)
bob_begin_package()
bob_begin_cxx_flags()
bob_end_cxx_flags()
bob_end_cxx_flags()
set(Goal_DATA "" CACHE PATH "Path to goal-data test files")
set(Goal_FAD_SIZE "40" CACHE STRING "Maximum Sacado derivative array size")
message(STATUS "Goal_DATA: ${Goal_DATA}")
message(STATUS "Goal_FAD_SIZE: ${Goal_FAD_SIZE}")
include(cmake/dependencies.cmake)
add_subdirectory(src)
bob_end_package()
