cmake_minimum_required(VERSION 3.0.0)
project(Goal VERSION 1.0.0 LANGUAGES CXX)
include(cmake/bob.cmake)
bob_begin_package()
bob_begin_cxx_flags()
bob_cxx11_flags()
bob_end_cxx_flags()
set(Goal_FAD_SIZE "70" CACHE STRING "Maximum Sacado derivative array size")
message(STATUS "Goal_FAD_SIZE: ${Goal_FAD_SIZE}")
include(cmake/dependencies.cmake)
add_subdirectory(doc)
add_subdirectory(src)
add_subdirectory(test)
bob_end_package()
